Output percentage values in double quotation marks in CVS exports

If percentages contain decimal places, the decimal point may conflict
with the comma currently used as a column separator, depending on the
language setting. This is resolved with this commit.

BUG:496700
FIXED-IN:5.2